--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <h1>hello guys</h1>
     <h2>Enter yours name</h2>
     <p>1. Sachin</p>
-    <p>2. Dhanus</p>
+    <p>2. Dhanushsivakumar</p>
     <h1>Guys do it fast </h1>
+
 </body>
 </html>
