my name written

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <h2>Enter yours name</h2>
     <p>1. Sachin</p>
     <p>2. Dhanushsivakumar</p>
+    <p>3.Rohith Dhayanidhi</p>
     <h1>Guys do it fast </h1>
     <h1>
         hi
     </h1>
-
 </body>
 </html>
